# pywikidata

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
pywikidata/: attributes.py  config.py  entity.py  logger.py  utils.py
tests/: test_entity.py
