[tool.poetry]
name = "pywikidata"
version = "0.1.8"
description = "Python Wrapper for Wikidata KG"
authors = ["Mikhail Salnikov"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
joblib = "^1.2.0"
requests = "^2.28.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
